<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_app"
    tools:context=".view.CreatePlateActivity">

    <EditText
        android:id="@+id/namePlateET"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="Nombre del Plato"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/infoPlateTV"
        app:layout_constraintEnd_toStartOf="@+id/typeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plateIB" />

    <EditText
        android:id="@+id/nameChefET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="Chef"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/priceET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plateIB"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <EditText
        android:id="@+id/priceET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="Valor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plateIB"
        app:layout_constraintTop_toBottomOf="@+id/nameChefET" />

    <ImageButton
        android:id="@+id/plateIB"
        android:layout_width="174dp"
        android:layout_height="171dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/infoPlateTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/info_plate"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plateIB" />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPlateTV" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/round_button"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/infoPlateTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plateIB"
        app:layout_constraintTop_toBottomOf="@+id/priceET" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="186dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nameChefET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plateIB"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/welt_chef_name" />

</androidx.constraintlayout.widget.ConstraintLayout>